Allow Doubles for Analyzed Files
Generated the clients.
