# webapp-ng/src/app/core/modules/openapi/model/analyzed-file.ts
@@ -16,6 +16,7 @@ import { ISize } from './i-size';
 
 export interface AnalyzedFile { 
     shortSpecData?: Array<Array<Array<number>>>;
+    doubleSpecData?: Array<Array<Array<number>>>;
     varNames?: Array<string>;
     times?: Array<number>;
     origin?: Origin;
